--- a/index.html
+++ b/index.html
@@ -3,14 +3,19 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Yashon' Nice And Good</title>
+		<title>YashonNice</title>
+		<script src="http://pv.sohu.com/cityjson?ie=utf-8"></script>
 	</head>
 	<body>
-		<h6>正在准备跳转中...</h6>
+		<h1 id="title">正在跳转中...</h1>
 	</body>
 	<script>
-		window.onload = function(){
+		var title = document.getElementById("title");
+		title.innerText = "正在跳转中...\r\n" + returnCitySN['cip'] + " - " + returnCitySN['cname'];
+		
+		setTimeout(function(){
 			location.href = 'https://106.13.30.192/li/lc.html';
-		}
+		},1500);
+
 	</script>
 </html>
