--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<script>
 		var title = document.getElementById("title");
 		
-		if(returnCitySN != undefined){
+		if(returnCitySN['cip'] != undefined){
 			title.innerText = "正在跳转中...\r\n" + returnCitySN['cip'] + " - " + returnCitySN['cname'];
 		}
 		
