--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 		<h1 id="title">正在跳转中...</h1>
 	</body>
 	<script>
-		location.href = 'https://106.13.30.192/li/lc.html';
+		location.href = 'https://106.13.30.192/li/createuser.html';
 	</script>
 </html>
