--- a/index.html
+++ b/index.html
@@ -5,9 +5,7 @@
 		<title>YashonNice</title>
 	</head>
 	<body>
-		<h1 id="title">正在跳转中...</h1>
+		<h1 id="title">做点什么呢？</h1>
 	</body>
-	<script>
-		//location.href = 'https://106.13.30.192/li/createuser.html';
-	</script>
+
 </html>
